Login y splash terminado

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,16 +1,13 @@
 <main>
   <div class="container">
-    <form class="form" action="">
+    <form class="form" [formGroup]="fg">
       <p class="title">Iniciar sesión</p>
-      <input placeholder="Correo" class="username input" type="email" />
-      <div class="cont-p">
-        @if(this.fg.controls['clave'].errors !== null &&
-        this.fg.controls["clave"].touched) { @if
-        (this.fg.controls['clave'].errors!['required']) {
-        <p>El campo esta vacio</p>
-        } }
-      </div>
-      <input placeholder="Clave" class="password input" type="password" />
+      <input
+        placeholder="Correo"
+        class="username input"
+        type="email"
+        formControlName="correo"
+      />
       <div class="cont-p">
         @if(this.fg.controls['correo'].errors !== null &&
         this.fg.controls["correo"].touched) { @if
@@ -20,62 +17,35 @@
         <p>No es un correo valido</p>
         } }
       </div>
-      <div class="">
+      <input
+        placeholder="Clave"
+        class="password input"
+        type="password"
+        formControlName="clave"
+      />
+      <div class="cont-p">
+        @if(this.fg.controls['clave'].errors !== null &&
+        this.fg.controls["clave"].touched) { @if
+        (this.fg.controls['clave'].errors!['required']) {
+        <p>El campo esta vacio</p>
+        } }
+      </div>
+
+      <div class="cont-btns">
         <button class="btn-secondary" (click)="cargaUsuario(usuarios[0])">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="16"
-            height="16"
-            fill="currentColor"
-            class="bi bi-person-check"
-            viewBox="0 0 16 16"
-          >
-            <path
-              d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m1.679-4.493-1.335 2.226a.75.75 0 0 1-1.174.144l-.774-.773a.5.5 0 0 1 .708-.708l.547.548 1.17-1.951a.5.5 0 1 1 .858.514M11 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0M8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
-            />
-            <path
-              d="M8.256 14a4.5 4.5 0 0 1-.229-1.004H3c.001-.246.154-.986.832-1.664C4.484 10.68 5.711 10 8 10q.39 0 .74.025c.226-.341.496-.65.804-.918Q8.844 9.002 8 9c-5 0-6 3-6 4s1 1 1 1z"
-            /></svg
-          >Fede
+          <i class="fa-solid fa-user"></i>
+          Fede
         </button>
         <button class="btn-secondary" (click)="cargaUsuario(usuarios[1])">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="16"
-            height="16"
-            fill="currentColor"
-            class="bi bi-person-check"
-            viewBox="0 0 16 16"
-          >
-            <path
-              d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m1.679-4.493-1.335 2.226a.75.75 0 0 1-1.174.144l-.774-.773a.5.5 0 0 1 .708-.708l.547.548 1.17-1.951a.5.5 0 1 1 .858.514M11 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0M8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
-            />
-            <path
-              d="M8.256 14a4.5 4.5 0 0 1-.229-1.004H3c.001-.246.154-.986.832-1.664C4.484 10.68 5.711 10 8 10q.39 0 .74.025c.226-.341.496-.65.804-.918Q8.844 9.002 8 9c-5 0-6 3-6 4s1 1 1 1z"
-            />
-          </svg>
+          <i class="fa-solid fa-user"></i>
           Luna
         </button>
         <button class="btn-secondary" (click)="cargaUsuario(usuarios[2])">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="16"
-            height="16"
-            fill="currentColor"
-            class="bi bi-person-check"
-            viewBox="0 0 16 16"
-          >
-            <path
-              d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m1.679-4.493-1.335 2.226a.75.75 0 0 1-1.174.144l-.774-.773a.5.5 0 0 1 .708-.708l.547.548 1.17-1.951a.5.5 0 1 1 .858.514M11 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0M8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
-            />
-            <path
-              d="M8.256 14a4.5 4.5 0 0 1-.229-1.004H3c.001-.246.154-.986.832-1.664C4.484 10.68 5.711 10 8 10q.39 0 .74.025c.226-.341.496-.65.804-.918Q8.844 9.002 8 9c-5 0-6 3-6 4s1 1 1 1z"
-            />
-          </svg>
+          <i class="fa-solid fa-user"></i>
           Clari
         </button>
       </div>
-      <button class="btn" type="submit">Acceder</button>
+      <button class="btn" type="submit" (click)="acceder()">Acceder</button>
     </form>
   </div>
 </main>
