--- a/src/global.scss
+++ b/src/global.scss
@@ -41,6 +41,14 @@ body {
   background-image: linear-gradient(to bottom, #424242, #212121);
 }
 
+.btn-secondary {
+  padding: 10px 22px;
+  border-radius: 6px;
+  border: 1px solid wheat;
+  background-color: transparent;
+  color: white;
+}
+
 .mb-3 {
   margin-bottom: 3rem;
 }
