--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,55 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<!-- BOTONES LENGUAJES -->
+<ion-fab vertical="center" horizontal="end">
+  <ion-fab-button>
+    <ion-icon name="earth"></ion-icon>
+  </ion-fab-button>
+  <ion-fab-list side="top">
+    <ion-fab-button color="danger">
+      <img src="assets/us.png" alt="ingles" />
+    </ion-fab-button>
+  </ion-fab-list>
+  <ion-fab-list side="start">
+    <ion-fab-button color="success">
+      <img src="assets/redondo.png" alt="portuges" />
+    </ion-fab-button>
+  </ion-fab-list>
+  <ion-fab-list side="bottom">
+    <ion-fab-button color="danger">
+      <img src="assets/espana.png" alt="español" />
+    </ion-fab-button>
+  </ion-fab-list>
+</ion-fab>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<!-- BOTONES TEMAS -->
+<ion-fab vertical="center" horizontal="start">
+  <ion-fab-button color="tertiary">
+    <ion-icon name="grid"></ion-icon>
+  </ion-fab-button>
+  <ion-fab-list side="top">
+    <ion-fab-button color="success" (click)="this.mostrarContenido(3)">
+      <i class="fa-solid fa-cat"></i>
+    </ion-fab-button>
+  </ion-fab-list>
+  <ion-fab-list side="end">
+    <ion-fab-button color="warning" (click)="this.mostrarContenido(1)">
+      <i class="fa-solid fa-1"></i>
+    </ion-fab-button>
+  </ion-fab-list>
+  <ion-fab-list side="bottom">
+    <ion-fab-button
+      color="danger"
+      side="bottom"
+      (click)="this.mostrarContenido(2)"
+    >
+      <ion-icon name="color-palette"></ion-icon>
+    </ion-fab-button>
+  </ion-fab-list>
+</ion-fab>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
-</ion-content>
+@switch (this.enum) { @case (1) {
+<app-numeros></app-numeros>
+} @case (3) {
+<app-animales></app-animales>
+} @default {
+<app-colores></app-colores>
+} }
