--- a/src/app/components/animales/animales.component.html
+++ b/src/app/components/animales/animales.component.html
@@ -1,6 +1,6 @@
 <main>
   @for (item of this.animales; track $index) {
-  <div class="{{ this.colores[$index] }}">
+  <div class="{{ this.colores[$index] }}" (click)="decirAnimal(item)">
     <img src="{{ '/assets/animals/' + item + '.png' }}" alt="{{ item }}" />
   </div>
   }
