App terminada oficialmente

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,3 +1,12 @@
+<ion-fab vertical="bottom" horizontal="end">
+  <ion-fab-button (click)="cerrarSesion()" color="light">
+    <i
+      class="fa-solid fa-arrow-right-from-bracket fa-lg"
+      style="color: #fc0303"
+    ></i>
+  </ion-fab-button>
+</ion-fab>
+
 <!-- BOTONES LENGUAJES -->
 <ion-fab vertical="top" horizontal="end">
   <ion-fab-button>
