Botones flotantes siempre disponibles

--- a/src/app/components/animales/animales.component.html
+++ b/src/app/components/animales/animales.component.html
@@ -1,7 +1,9 @@
-<main>
+<!-- <main> -->
+<div class="div-btns">
   @for (item of this.animales; track $index) {
   <div class="{{ this.colores[$index] }}" (click)="decirAnimal(item)">
     <img src="{{ '/assets/animals/' + item + '.png' }}" alt="{{ item }}" />
   </div>
   }
-</main>
+</div>
+<!-- </main> -->
