--- a/src/app/components/animales/animales.component.scss
+++ b/src/app/components/animales/animales.component.scss
@@ -1,12 +1,17 @@
 div {
   flex-grow: 1; /* Hace que los botones crezcan proporcionalmente */
   display: flex;
-  align-items: center;
   justify-content: center;
-  padding-top: 10px;
-  padding-bottom: 10px;
 }
 
 img {
   height: 120px;
+}
+
+@media screen and (max-height: 650px) {
+  div {
+    align-items: center;
+    min-height: 80vh;
+    max-height: 80vh;
+  }
 }
