--- a/src/app/components/colores/colores.component.html
+++ b/src/app/components/colores/colores.component.html
@@ -1,7 +1,7 @@
-<!-- <main> -->
-<div class="div-btns">
-  @for (item of this.colores; track $index) {
-  <button class="{{ item }}" (click)="decir(item)"></button>
-  }
-</div>
-<!-- </main> -->
+<main>
+  <div class="div-btns">
+    @for (item of this.colores; track $index) {
+    <button class="{{ item }}" (click)="decir(item)"></button>
+    }
+  </div>
+</main>
