--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,56 @@
-<ion-fab vertical="bottom" horizontal="end">
+<!-- <ion-fab vertical="bottom" horizontal="end">
   <ion-fab-button (click)="cerrarSesion()" color="light">
     <i
       class="fa-solid fa-arrow-right-from-bracket fa-lg"
       style="color: #fc0303"
     ></i>
   </ion-fab-button>
+</ion-fab> -->
+
+<!-- IDIOMA -->
+<ion-fab horizontal="end" vertical="bottom">
+  <ion-fab-button (click)="cambiarIdioma('castellano')" color="danger">
+    <img src="assets/espana.png" alt="español" />
+  </ion-fab-button>
+</ion-fab>
+
+<ion-fab horizontal="end" vertical="top">
+  <ion-fab-button (click)="cambiarIdioma('portuges')" color="success">
+    <img src="assets/redondo.png" alt="portuges" />
+  </ion-fab-button>
+</ion-fab>
+
+<ion-fab horizontal="end" vertical="center">
+  <ion-fab-button (click)="cambiarIdioma('ingles')" color="danger">
+    <img src="assets/us.png" alt="ingles" />
+  </ion-fab-button>
+</ion-fab>
+
+<!-- TEMA -->
+
+<ion-fab horizontal="start" vertical="bottom">
+  <ion-fab-button (click)="this.mostrarContenido(3)" color="success">
+    <!-- <i class="fa-solid fa-cat fa-xl" style="color: #ffd43b" size="large"></i> -->
+    <img src="assets/animals.png" alt="leon" />
+  </ion-fab-button>
+</ion-fab>
+
+<ion-fab horizontal="start" vertical="center">
+  <ion-fab-button (click)="this.mostrarContenido(1)" color="danger">
+    <!-- <i class="fa-solid fa-1 fa-xl" style="color: #008000" size="large"></i> -->
+    <img src="assets/number.png" alt="leon" />
+  </ion-fab-button>
+</ion-fab>
+
+<ion-fab horizontal="start" vertical="top">
+  <ion-fab-button (click)="this.mostrarContenido(2)" color="tertiary">
+    <!-- <i class="fa-solid fa-palette fa-2xl" style="color: #ff1414"></i> -->
+    <img src="assets/colours.png" alt="leon" />
+  </ion-fab-button>
 </ion-fab>
 
 <div class="seleccion">
-  <div class="floating-buttons superior-izquierda">
+  <!-- <div class="floating-buttons superior-izquierda">
     <button class="fab-button" (click)="cambiarIdioma('castellano')">
       <img src="assets/espana.png" alt="español" />
     </button>
@@ -18,8 +60,23 @@
     <button class="fab-button" (click)="cambiarIdioma('ingles')">
       <img src="assets/us.png" alt="ingles" />
     </button>
-  </div>
+  </div> -->
   <div class="btns">
+    <div class="tema">
+      @switch (this.enum) { @case (1) {
+      <!-- <i class="fa-solid fa-1 fa-2xl" style="color: #008000"></i> -->
+      <img src="assets/number.png" alt="leon" />
+
+      } @case (3) {
+      <!-- <i class="fa-solid fa-cat fa-2xl" style="color: #ffd43b"></i> -->
+      <img src="assets/animals.png" alt="leon" />
+
+      } @default {
+      <!-- <i class="fa-solid fa-palette fa-2xl" style="color: #ff1414"></i> -->
+      <img src="assets/colours.png" alt="leon" />
+
+      } }
+    </div>
     <div class="idioma">
       @switch (this.idioma) { @case ('castellano') {
       <img src="assets/espana.png" alt="español" />
@@ -32,19 +89,8 @@
 
       } }
     </div>
-    <div class="tema">
-      @switch (this.enum) { @case (1) {
-      <i class="fa-solid fa-1 fa-2xl" style="color: #008000"></i>
-
-      } @case (3) {
-      <i class="fa-solid fa-cat fa-2xl" style="color: #ffd43b"></i>
-
-      } @default {
-      <ion-icon name="color-palette" color="danger" size="large"></ion-icon>
-      } }
-    </div>
   </div>
-  <div class="floating-buttons superior-derecha">
+  <!-- <div class="floating-buttons superior-derecha">
     <button class="fab-button" (click)="this.mostrarContenido(3)">
       <i class="fa-solid fa-cat fa-xl" style="color: #ffd43b" size="large"></i>
     </button>
@@ -54,7 +100,7 @@
     <button class="fab-button" (click)="this.mostrarContenido(2)">
       <ion-icon name="color-palette" color="danger" size="large"></ion-icon>
     </button>
-  </div>
+  </div> -->
 </div>
 
 @switch (this.enum) { @case (1) {
