cerrar sesion guard

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -45,7 +45,7 @@
 <ion-fab horizontal="start" vertical="top">
   <ion-fab-button (click)="this.mostrarContenido(2)" color="tertiary">
     <!-- <i class="fa-solid fa-palette fa-2xl" style="color: #ff1414"></i> -->
-    <img src="assets/colours.png" alt="leon" />
+    <img src="assets/colours.png" alt="leon" id="img-c" />
   </ion-fab-button>
 </ion-fab>
 
