--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -33,6 +33,11 @@ img {
   width: 52px;
 }
 
+#img-c {
+  width: 46px;
+  height: 46px;
+}
+
 @media screen and (max-height: 650px) {
   .seleccion {
     min-height: 25vh;
